crates/forge/tests/e2e/snapshots/backtrace/main__e2e__backtrace__snap_test_backtrace_without_inlines@2.17.0.snap
---
source: crates/forge/tests/e2e/backtrace.rs
expression: stdout
---


[FAIL] backtrace_vm_error::Test::test_fork_unwrapped_call_contract_syscall

Failure data:
    Got an exception while executing a hint: Error at pc=0:280:
Got an exception while executing a hint: Error at pc=0:86:
Got an exception while executing a hint: Requested contract address 0x0000000000000000000000000000000000000000000000000000000000000123 is not deployed.

Cairo traceback (most recent call last):
Unknown location (pc=0:50)
Unknown location (pc=0:207)


stack backtrace:
   in forked contract with class hash: 0x1a92e0ec431585e5c19b98679e582ebc07d43681ba1cc9c55dcb5ba0ce721a1
   note: backtrace is not available for forked contracts

   in contract 'OuterContract':
      0: backtrace_vm_error::IInnerContractDispatcherImpl::inner
         at [..]lib.cairo:22:1
      1: backtrace_vm_error::OuterContract::OuterContract::outer
         at [..]lib.cairo:17:13
      2: backtrace_vm_error::OuterContract::__wrapper__OuterContract__outer
         at [..]lib.cairo:13:5

   in test 'backtrace_vm_error::Test::test_fork_unwrapped_call_contract_syscall':
      0: backtrace_vm_error::IOuterContractDispatcherImpl::outer
         at [..]lib.cairo:1:1
      1: backtrace_vm_error::Test::test_fork_unwrapped_call_contract_syscall
         at [..]lib.cairo:84:9
      2: backtrace_vm_error::Test::test_fork_unwrapped_call_contract_syscall__snforge_internal_test_generated
         at [..]lib.cairo:70:5

[FAIL] backtrace_vm_error::Test::test_unwrapped_call_contract_syscall

Failure data:
    Got an exception while executing a hint: Error at pc=0:280:
Got an exception while executing a hint: Error at pc=0:184:
Got an exception while executing a hint: Requested contract address 0x0000000000000000000000000000000000000000000000000000000000000123 is not deployed.
Cairo traceback (most recent call last):
Unknown location (pc=0:43)
Unknown location (pc=0:133)

Cairo traceback (most recent call last):
Unknown location (pc=0:50)
Unknown location (pc=0:207)


stack backtrace:
   in contract 'InnerContract':
      0: backtrace_vm_error::InnerContract::inner_call
         at [..]lib.cairo:48:9
      1: backtrace_vm_error::InnerContract::InnerContract::inner
         at [..]lib.cairo:38:13
      2: backtrace_vm_error::InnerContract::__wrapper__InnerContract__inner
         at [..]lib.cairo:35:5

   in contract 'OuterContract':
      0: backtrace_vm_error::IInnerContractDispatcherImpl::inner
         at [..]lib.cairo:22:1
      1: backtrace_vm_error::OuterContract::OuterContract::outer
         at [..]lib.cairo:17:13
      2: backtrace_vm_error::OuterContract::__wrapper__OuterContract__outer
         at [..]lib.cairo:13:5

   in test 'backtrace_vm_error::Test::test_unwrapped_call_contract_syscall':
      0: backtrace_vm_error::IOuterContractDispatcherImpl::outer
         at [..]lib.cairo:1:1
      1: backtrace_vm_error::Test::test_unwrapped_call_contract_syscall
         at [..]lib.cairo:67:9
      2: backtrace_vm_error::Test::test_unwrapped_call_contract_syscall__snforge_internal_test_generated
         at [..]lib.cairo:58:5


Failures:
    backtrace_vm_error::Test::test_fork_unwrapped_call_contract_syscall
    backtrace_vm_error::Test::test_unwrapped_call_contract_syscall
